--- a/07-prop-types.html
+++ b/07-prop-types.html
@@ -5,22 +5,36 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
   <script type="text/babel">
-    const rootElement = document.getElementById('root')
+      const rootElement = document.getElementById('root')
 
-    function SayHello({firstName, lastName}) {
-      return (
-        <div>
-          Hello {firstName} {lastName}!
-        </div>
-      )
-    }
-    SayHello.propTypes = {
-      firstName: PropTypes.string.isRequired,
-      lastName: PropTypes.string.isRequired,
-    }
+      //Once we create custom components, other can use them and it may happen that they use it in the wrong way
+      //For this reason "proptypes" has been developed, this package allows run-time validation of the props passed to ur components
 
-    const element = <SayHello firstName={false} />
+      function SayHello({ firstName, lastName }) {
+          return (
+              <div>
+                  Hello {firstName} {lastName}!
+              </div>
+          )
+      }
 
-    ReactDOM.render(element, rootElement)
+      const PropTypes = {
+          string(props, propName, componentName) {
+              if (typeof props[propName] !== 'string') {
+                  return new Error(
+                      `Hey, the component ${componentName} needs the prop ${propName} to be a String, but you passed a ${typeof props[propName]}`
+                  )
+              }
+          }
+      }
+      
+     SayHello.propTypes={
+      firstName:PropTypes.string,
+      lastName:PropTypes.string,
+     }
+
+      const element = <SayHello firstName={false} />
+
+      ReactDOM.render(element, rootElement)
   </script>
 </body>
