--- a/08-jsx-interpolation.html
+++ b/08-jsx-interpolation.html
@@ -4,13 +4,17 @@
   <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
+
+
     function CharacterCount({text}) {
-      return (
-        <div>
-          {`The text "${text}" has `}
-          {text.length ? <strong>{text.length}</strong> : 'No'}
-          {' characters'}
-        </div>
+      const length = text.length?text.length:"No";
+      // Here is still JS
+      return(
+          // Now we are in JSX
+          <div>
+             {/* We are in JS again, but we can only evaluate expressions (eg. NO loops/control,etc.) */`The text "${text}" has `}{' '}
+             {text.length?<strong>{text.length}</strong>:'No'} {' characters'}
+          </div>
       )
     }
 
