--- a/10-styling.html
+++ b/10-styling.html
@@ -4,53 +4,68 @@
   <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <style>
-    .box {
-      border: 1px solid #333;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-    }
-    .box--large {
-      width: 270px;
-      height: 270px;
-    }
-    .box--medium {
-      width: 180px;
-      height: 180px;
-    }
-    .box--small {
-      width: 90px;
-      height: 90px;
-    }
+      .box {
+          border: 1px solid #333;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          text-align: center;
+      }
+
+      .box--large {
+          width: 270px;
+          height: 270px;
+      }
+
+      .box--medium {
+          width: 180px;
+          height: 180px;
+      }
+
+      .box--small {
+          width: 90px;
+          height: 90px;
+      }
   </style>
   <script type="text/babel">
-    function Box({style, size, className = '', ...rest}) {
-      const sizeClassName = size ? `box--${size}` : ''
-      return (
-        <div
-          className={`box ${className} ${sizeClassName}`}
-          style={{fontStyle: 'italic', ...style}}
-          {...rest}
-        />
+
+      function Box({ className = '', style, size, ...restOfProps }) {
+
+          const sizeClassName = size ? `box--${size}` : '';
+          //! It's className rather than just class, because the latter is a reserved keyword
+
+          return (
+              <div
+                  className={`box ${className} ${sizeClassName}`}
+                  style={{ fontStyle: 'italic', ...style }} {...restOfProps}
+              />
+          )
+      }
+
+      const element = (
+          <div>
+              <Box
+                  size="small"
+                  style={{ backgroundColor: 'lightblue', fontStyle: 'italic' }}
+              >
+                  small lightblue box
+              </Box>
+              <Box
+                  size='medium'
+                  style={{ backgroundColor: 'orange', fontStyle: 'italic' }}
+              >
+                  medium orange box
+              </Box>
+              <Box
+                  size="large"
+                  style={{ backgroundColor: 'purple', fontStyle: 'italic' }}
+              >
+                  big purple box
+              </Box>
+          </div>
+
       )
-    }
 
-    const element = (
-      <div>
-        <Box size="small" style={{backgroundColor: 'lightblue'}}>
-          small lightblue box
-        </Box>
-        <Box size="medium" style={{backgroundColor: 'pink'}}>
-          medium pink box
-        </Box>
-        <Box size="large" style={{backgroundColor: 'orange'}}>
-          large orange box
-        </Box>
-        <Box>sizeless box</Box>
-      </div>
-    )
-
-    ReactDOM.render(element, document.getElementById('root'))
+      ReactDOM.render(element, document.getElementById('root'))
   </script>
 </body>
