--- a/12-state.html
+++ b/12-state.html
@@ -5,16 +5,24 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     function Greeting() {
-      const [name, setName] = React.useState('')
-      const handleChange = event => setName(event.target.value)
-      return (
-        <div>
-          <form>
-            <label htmlFor="name">Name: </label>
-            <input onChange={handleChange} id="name" />
-          </form>
-          {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-        </div>
+      //React Hook serves to maintain the state for a React component
+
+      // const stateArray = React.useState(''); // We pass the default value
+      // const name = stateArray[0];
+      // const setName = stateArray[1];
+
+      // IN A BETTER MANNER:
+      const [name, setName] = React.useState(""); //.useState is a Hook
+
+      const handleChange = event => setName(event.target.value);
+
+      return (<div>
+        <form>
+          <label htmlFor='name'>Name:</label>
+          <input onChange={handleChange} id='name' />
+        </form>
+        {name ? <strong>Hello {name}</strong> : 'Please type your name'}
+      </div>
       )
     }
 
