--- a/19-basic-forms.html
+++ b/19-basic-forms.html
@@ -5,21 +5,32 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     function UsernameForm() {
+      
+      const usernameInputRef = React.useRef(); // Hook for form
+
       function handleSubmit(event) {
-        event.preventDefault()
-        const username = event.target.elements.usernameInput.value
+        event.preventDefault(); // prevent page reload after submitting the form
+        console.log("submitted");
+
+        //This isn't an efficient way to access an input...
+        // const username=document.querySelector('input[type="text"]').value;
+
+        //... So we can use the event object in different ways
+        // const username=event.target[0].value
+        // const username = event.target.elements[0].value
+        // const username = event.target.elements.usernameInput.value
+        const username = usernameInputRef.current.value;
+        console.dir(usernameInputRef)
         alert(`You entered: ${username}`)
       }
-
       return (
         <form onSubmit={handleSubmit}>
           <div>
             <label htmlFor="usernameInput">Username:</label>
-            <input id="usernameInput" type="text" />
+            <input ref={usernameInputRef} id="usernameInput" type="text" />
           </div>
           <button type="submit">Submit</button>
-        </form>
-      )
+        </form>)
     }
 
     ReactDOM.render(<UsernameForm />, document.getElementById('root'))
