--- a/20-dynamic-forms.html
+++ b/20-dynamic-forms.html
@@ -5,11 +5,14 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     function UsernameForm() {
-      const [username, setUsername] = React.useState('')
-      const isLowerCase = username === username.toLowerCase()
-      const error = isLowerCase ? null : 'Username must be lower case'
+
+      const [username, setUsername] = React.useState('');
+
+      const isLowerCase = username === username.toLowerCase();
+      const error = isLowerCase ? null : "Username must be lower case"
 
       function handleSubmit(event) {
+
         event.preventDefault()
         alert(`You entered: ${username}`)
       }
@@ -24,7 +27,7 @@
             <label htmlFor="usernameInput">Username:</label>
             <input id="usernameInput" type="text" onChange={handleChange} />
           </div>
-          <div style={{color: 'red'}}>{error}</div>
+          <div style={{ color: 'red' }}>{error}</div>
           <button disabled={Boolean(error)} type="submit">
             Submit
           </button>
