feat:21-sync values

--- a/21-controlled-forms.html
+++ b/21-controlled-forms.html
@@ -24,7 +24,9 @@
               id="usernameInput"
               type="text"
               onChange={handleChange}
+              // Putting the value will synchronize the displayed value with the const in the UsernameForm()
               value={username}
+              
             />
           </div>
           <button type="submit">Submit</button>
