--- a/22-error-boundaries.html
+++ b/22-error-boundaries.html
@@ -5,23 +5,32 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script src="https://unpkg.com/react-error-boundary@1.2.5/dist/umd/react-error-boundary.js"></script>
   <script type="text/babel">
-    const ErrorBoundary = ReactErrorBoundary.ErrorBoundary
+
+    //Error boundaries have to be class components
     // class ErrorBoundary extends React.Component {
-    //   state = {error: null}
+    //   state = { error: null }
+
     //   static getDerivedStateFromError(error) {
-    //     return {error}
+    //     return { error }
     //   }
     //   render() {
-    //     const {error} = this.state
+    //     const { error } = this.state
     //     if (error) {
-    //       return <this.props.FallbackComponent error={error} />
+    //       return <this.props.FallbackComponent error={error}/>
     //     }
-
-    //     return this.props.children
+    //     console.log(this);
+    //     return this.props.children //This access what is inside the < >
     //   }
     // }
 
-    function ErrorFallback({error}) {
+    //INSTEAD OF CREATING A CUSTOM ERROR CLASS, we can use an external library
+    const ErrorBoundary = ReactErrorBoundary.ErrorBoundary;
+    // Error boundary can be placed anywhere in the tree, but it handles also the error of all its descendent, but it WILL REPLACE the descendant with other contents
+
+    //ErrorBoundary can handle ONLY errors that happen in the React call stack, and not in callbacks or async functions/ promises, etc.
+
+    // General Error component for the application
+    function ErrorFallBack({ error }) {
       return (
         <div>
           <p>Something went wrong:</p>
@@ -29,6 +38,8 @@
         </div>
       )
     }
+    //Passing this to the FallbackComponent!
+
 
     function Bomb() {
       throw new Error('💥 CABOOM 💥')
@@ -36,17 +47,20 @@
 
     function App() {
       const [explode, setExplode] = React.useState(false)
+      //We can have multiple error handlers and React will use the closest one
       return (
-        <div>
+        <ErrorBoundary FallbackComponent={ErrorFallBack}>
           <div>
-            <button onClick={() => setExplode(true)}>💣</button>
+            <div>
+              <button onClick={() => setExplode(true)}>💣</button>
+            </div>
+            <div>
+              <ErrorBoundary FallbackComponent={ErrorFallBack}>
+                {explode ? <Bomb /> : 'Push the button Max!'}
+              </ErrorBoundary>
+            </div>
           </div>
-          <div>
-            <ErrorBoundary FallbackComponent={ErrorFallback}>
-              {explode ? <Bomb /> : 'Push the button Max!'}
-            </ErrorBoundary>
-          </div>
-        </div>
+        </ErrorBoundary>
       )
     }
     ReactDOM.render(<App />, document.getElementById('root'))
